# grid

./: .buildinfo  .cardboardlint.yml  .gitignore  .pre-commit-config.yaml  .roberto.yaml  .travis.yml  CNAME  CONTRIBUTING.md  HEADER  MANIFEST.in  README.html  README.md  README.rst  adaptive_benchmarks_output.txt  adaptive_design.md  azure-pipelines.yml  benchmark_adaptive.py  benchmark_output.txt  cleanfiles.sh  conventions.html  genindex.html  gk_adaptive.py  gk_output.txt  gk_prototype.py  gsoc_contribution_summary.md  index.html  installation.html  intro.html  objects.inv  onedgrids.html  output.txt  prototype_refinement.py  py-modindex.html  pyproject.toml  radial_transf.html  requirements.txt  results.txt  search.html  searchindex.js  setup.py  (+4 more)
_sources/: index.rst  installation.rst  intro.md
doc/: README.md  conf.py  conventions.rst  gen_api.sh  gen_doc.sh  gen_table_onedgrids.py  gen_table_rtransform.py  index.rst  installation.rst  onedgrids.rst  radial_transf.rst  table_angular_lebedev.csv  table_angular_spherical.csv  table_index.csv  table_modules.csv  table_onedgrids.csv  table_rtransform.csv
docs/: CNAME  contents.html  conventions.html  genindex.html  index.html  installation.html  objects.inv  onedgrids.html  py-modindex.html  radial_transf.html  search.html  searchindex.js
examples/: Angular_grid.ipynb  Atom_Grid.ipynb  Atom_Grid_Construction.ipynb  BFit_Performance_Analysis.ipynb  Cubic_Grids.ipynb  Interpolation_and_Poisson.ipynb  JCP_Paper.ipynb  Molecular_Grid.ipynb  Molecular_Grid_Construction.ipynb  Multipole_Moments.ipynb  Nested_Angluar_Grid.ipynb  One_dimensional_grids.ipynb  One_dimensional_grids.ipynb.orig  Quickstart.ipynb  adaptive_grid.ipynb  ch2o_q+0.fchk  max_det_integration.ipynb  parallelepiped_interpolation.py  result_kl_fpi_stype_only.npz
grid/: __init__.py  cell.cpp  cell.h  cell.pxd  cext.pxd  cext.pyx  moments.cpp  moments.h  moments.pxd  moments.py  periodic.py  symmetry.py  utils.py
notebooks/: JCP_Paper.html  JCP_Paper.ipynb  angular_grid.html  angular_grid.ipynb  atom_grid.html  atom_grid.ipynb  atom_grid_construction.html  atom_grid_construction.ipynb  cubic_grid.html  cubic_grid.ipynb  interpolation_poisson.html  interpolation_poisson.ipynb  molecular_grid.html  molecular_grid.ipynb  molecular_grid_construction.html  molecular_grid_construction.ipynb  multipole_moments.html  multipole_moments.ipynb  one_dimensional_grids.html  one_dimensional_grids.ipynb  quickstart.html  (+1 more)
(+937 files in other folders)
